# SOP.PY

./: .gitignore  docker-compose.yml  filebeat.yml  pyproject.toml
benchmark/: script.js
src/cmd/server/: container.py  main.py
src/cmd/worker/: main.py
src/modules/chat/adapter/dependencies/: channel_account.py
src/modules/chat/adapter/http/: facebook_client.py  rest.py  tasks.py
src/modules/chat/adapter/http/dtos/: channel_account_schema.py
src/modules/chat/adapter/minio/: file_storage.py
src/modules/chat/adapter/postgresql/: alembic.ini
src/modules/chat/adapter/postgresql/migration/: env.py
src/modules/chat/adapter/postgresql/model/: channel_account_model.py  conversation_model.py  customer_model.py  message_file_model.py  message_model.py
src/modules/chat/adapter/postgresql/repo/: channel_account_repo.py  conversation_repo.py  customer_repo.py  message_file_repo.py  message_repo.py
src/modules/chat/adapter/redis/: channel_account_cache.py  customer_cache.py
src/modules/chat/adapter/taskiq/: tasks.py
src/modules/chat/core/application/dtos/: save_facebook_token.py
src/modules/chat/core/application/usecase/: enqueue_facebook_webhook.py  find_channel_account.py  process_facebook_message.py  save_facebook_usecase.py
src/modules/chat/core/domain/entity/: channel_account.py  conversation.py  customer.py  message.py  (+1 more)
src/pkg/: broker.py
src/pkg/config/: settings.py
src/pkg/database/: database.py
src/pkg/logger/: config.py
src/pkg/middleware/: security_headers_middleware.py
src/pkg/minio/: client.py
src/pkg/redis/: client.py
(+11 files in other folders)
